apps/llama-cpp/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: llama-cpp
          livenessProbe:
            httpGet:
              scheme: HTTPS
          readinessProbe:
            httpGet:
              scheme: HTTPS
          startupProbe:
            httpGet:
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: llama-cpp-tls
