apps/llama-cpp/components/tls/patch-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference
spec:
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          gateway.envoyproxy.io/mtls: "true"
        certificateRefs:
          - name: studio-shikanime-i-inference-tls
